[gd_scene load_steps=10 format=2]

[ext_resource path="res://assert/home.png" type="Texture" id=1]
[ext_resource path="res://Playground.gd" type="Script" id=2]
[ext_resource path="res://background/DrawBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://assert/reset.png" type="Texture" id=4]
[ext_resource path="res://assert/circular.png" type="Texture" id=5]
[ext_resource path="res://assert/Lato-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/Dialog.tscn" type="PackedScene" id=7]

[sub_resource type="Theme" id=1]
bg_color/styles/#ff0000 = null

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[node name="Playground" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="Node2D" parent="."]
z_index = 2

[node name="HomeButton" type="TextureButton" parent="UI"]
margin_left = 50.0
margin_top = 160.0
margin_right = 178.0
margin_bottom = 288.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="ResetButton" type="TextureButton" parent="UI"]
margin_left = 502.0
margin_top = 160.0
margin_right = 630.0
margin_bottom = 288.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )

[node name="ReloadButton" type="TextureButton" parent="UI"]
margin_left = 606.0
margin_top = 160.0
margin_right = 734.0
margin_bottom = 288.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 1 )
texture_normal = ExtResource( 5 )

[node name="AppName" type="Label" parent="UI"]
margin_left = 50.0
margin_top = 50.0
margin_right = 198.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0.952941, 0.501961, 0.137255, 1 )
custom_fonts/font = SubResource( 2 )
text = "2048"

[node name="Dialog" parent="UI" instance=ExtResource( 7 )]
visible = false
margin_left = 126.0
margin_top = 413.0
margin_right = -127.0
margin_bottom = -358.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="DrawBackground" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 260 )

[node name="Tile" type="Node" parent="."]

[connection signal="pressed" from="UI/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="UI/ReloadButton" to="." method="_on_ReloadButton_pressed"]
